assets/css/style.css
/* ... */
hr.goals-line {
  overflow: visible; /* For IE */
  padding: 0;
  padding-top: 3%;
  border: none;
  border-top: medium double white;
  max-width: 50%;
  margin-left: 27%;
  color: #333;
  text-align: center;
}
hr.goals-line:after {
  content: "§";
  display: inline-block;
  position: relative;
  top: -1.9em;
  font-size: 1.5em;
  padding: 0 0.25em;
  background: white;
}

/*prices page*/
.prices-image{
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
  url("../images/gallery-img-5.webp");
  height:75vh;
  max-width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;     
}

.membership-list{
  list-style-type:none;
  text-align: center;
}
.txt-center{
  text-align: center;
}
.text-left {
  text-align: left; }

.membership-btn{
  border: none;
  outline: 0;
  display: inline-block;
  padding: 8px;
  color: white;
  background-color: #000;
  text-align: center;
  cursor: pointer;
  max-width: 100%;
}
.membership-btn:hover {
  background-color: #555;
}

/*schedule page*/
.schedule-image{
  background-color: rgb(203,216,198);
  height:75vh;
  max-width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;     
}
.cover-img-text{
  text-align: right;
  font-size: xx-large;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}
.inner-row:after {
  content: "";
  display:flexbox;
  clear: both;
}
.inner-row {
  float: left;
  max-width: 50%;
  max-height: 50%;
  margin:0;
  padding-bottom: 2%;
  margin: 0 -5px;
}
.week-panel h4{
font-size: 10px;
color:black;
text-align: center;
}

.inner-row-card{
  margin: 0 -5px;
}
.inner-row-card:after {
  content: "";
  display: table;
  clear: both;
}
.inner-card{
  box-shadow: 0 2rem 2rem #00000080; /* this adds the shadow effect */
  padding: 16px;
  text-align: center;
  background-color: #f1f1f1;
  height:100%;
  margin-bottom:-5%;
}
.inner-col-card{
    max-width: 29%;
    padding: 0 20px;
    margin:2%;
    display:inline-block;
    height:fit-content;    
}

h2{
  color:#000;
  text-align:center;
  font-size:2em;
}
.schedule-content{
  display:flex;
  flex-direction: column;
  align-items: center;
}
.week-tab{
  cursor: pointer;
  padding:10px 20px;
  margin:0px 16px;
  background:#000;
  display:inline-block;
  color:#fff;
  border-radius:4px 4px 0px 0px;
  box-shadow: 0 0.5rem 0.8rem #00000080;
}
.week-panels{
  box-shadow: 0 2rem 2rem #00000080;
  min-height:350px;
  width:100%;
  max-width:1000px;
  border-radius:3px;
  overflow:hidden;
  padding:20px;  
}
.card-display{
  display:inline;
}
.week-panel{
  display:none;
  animation: fadein .8s;
}
@keyframes fadein {
    from {
        opacity:0;
    }
    to {
        opacity:1;
    }
}
.week-panel-title{
  font-size:1.5em;
  font-weight:bold
}
.radio{
  display:none;
}
#monday:checked ~ .week-panels #monday-panel,
#tuesday:checked ~ .week-panels #tuesday-panel,
#wednesday:checked ~ .week-panels #wednesday-panel,
#thursday:checked ~ .week-panels #thursday-panel,
#friday:checked ~ .week-panels #friday-panel,
#saturday:checked ~ .week-panels #saturday-panel,
#sunday:checked ~ .week-panels #sunday-panel{
  display:block
}
/*effects when week day tab is selected*/
#monday:checked ~ .week-tabs #monday-tab,
#tuesday:checked ~ .week-tabs #tuesday-tab,
#wednesday:checked ~ .week-tabs #wednesday-tab,
#wednesady:checked ~ .week-tabs #tuesday-tab,
#thursday:checked ~ .week-tabs #thursday-tab,
#friday:checked ~ .week-tabs #friday-tab,
#saturday:checked ~ .week-tabs #saturday-tab,
#sunday:checked ~ .week-tabs #sunday-tab
{
  background:rgb(235,236,225);
  color:#000;
  border-top: 3px solid #000;
}


/*contact page*/
.contact-image{
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
  url("../images/gallery-img-7.webp");
  height:75vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;     
}

.contact-address{
  margin-left:1.9rem;
  text-align: left;
  margin-bottom: 3.0rem;
}

.contact-list i{
    font-size: 100%;   
    padding: 2%;
    color: #3a3a3a;
    text-align:center;
    display:inline-block; 
    margin-left:-1%; 
}

.contact-list li{ 
  display:inline-block;  
  padding: 1%;
}

input[type=text], select, textarea{
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}

input[type=email], select, textarea{
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 16px;
  resize: vertical;
}

input[type=submit] {
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}
.form-block {
  margin-right:1.9rem;
  height:fit-content;
  margin-bottom:4.9rem;
}

.required {
  border: none;
  cursor: default; 
}

.form-block h5 {
  margin-bottom: 3.0rem;
  margin-left: auto;
  text-align: center;
}

/*maps*/

 iframe{
  padding: 0 !important;
  margin-left: 0.2%;
  margin-right:0.2%;
 }

 /* sign up page*/
 .sign-up-img{
  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
  url("../images/gallery-img-7.webp");
  height:100vh;
  width: 100vw;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;   
 }
    /*sign up*/
    * {box-sizing: border-box}
input[type=text], input[type=password] {
   width: 100%;
   font-size: 15px;
   padding: 15px;
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
}
label{
   font-size: 15px;
}
textarea{
  background-color: white;
}

input[type=text], input[type=password], input[type=email], textarea{
  background-color:white;
  font-size: 15px;
  outline: none;
}
/* ... */

